Revert "🤖 Apply quick-fixes by Qodana"
This reverts commit f0c4d9d76b5290be7bb26ed61d499640da57649f.